src/objects/Service__c.object
<CustomObject>
    <fields>
        <fullName>Customer__c</fullName>
        <label>Customer</label>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Service</relationshipLabel>
        <relationshipName>Service</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Problem_Details__c</fullName>
        <label>Problem Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Problem_Issue_Type__c</fullName>
        <label>Problem/Issue Type</label>
        <picklist>
            <picklistValues>
                <fullName>CCTV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laptop/Desktop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wifi</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_Reason__c</fullName>
        <label>Status Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Workmen__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Workmen</label>
        <referenceTo>Workmen__c</referenceTo>
        <relationshipLabel>Service</relationshipLabel>
        <relationshipName>Service</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Service</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SN-{00000}</displayFormat>
        <label>Service Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Status_Reason_required</fullName>
        <active>true</active>
        <description>Status Reason required if Status equals Not Completed</description>
        <errorConditionFormula>ISPICKVAL( Status__c , &apos;Not Completed&apos;)</errorConditionFormula>
        <errorDisplayField>Status_Reason__c</errorDisplayField>
        <errorMessage>Status Reason required if Status equals Not Completed</errorMessage>
    </validationRules>
</CustomObject>